fixed favicon path

--- a/play.html
+++ b/play.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel=icon href="/res/img/lives_orange.png" type="image/x-icon">
+  <link rel=icon href="res/img/lives_orange.png" type="image/x-icon">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/space.css" rel="stylesheet">
   <title>Space Shooter</title>
