changed background color

--- a/play.html
+++ b/play.html
@@ -6,11 +6,11 @@
   <link href="css/space.css" rel="stylesheet">
   <title>Space Shooter</title>
 </head>
-<body>
-  <div class="wrapper">
+<body > 
+  <div class="wrapper" style="background-color:#002B36">
     <div class="container">
       <div class="canvas-container">
-        <canvas id='mainCanvas' width='1200' height='800'></canvas>
+        <canvas id='mainCanvas' width='1200' height='720'></canvas>
       </div>
     </div>
   </div>
